[package]
name = "distributed-value-store"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10"
futures = "0.3.28"
multiaddr = { version = "0.17.1" }

libp2p = {version = "0.51.3", features = ["gossipsub", "async-std", "dns", "kad", "mdns", "noise", "macros", "tcp", "websocket", "yamux"] }
